start extracting stuff.

--- a/BasicImagePackage.html
+++ b/BasicImagePackage.html
@@ -9,46 +9,59 @@ and open the template in the editor.
         <title>The basic image package</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!--
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        -->
     </head>
     <body>
+        <h1>The basic image package</h1>
+        <div class="packagedescription">
+            This is an example package. It supplies the basic functionality 
+        </div>
         The original image. 
-        <img src="jpeg.jpg">
-        <p>
+        <div class="original">
+            <img src="jpeg.jpg">
+        </div>
+        <div class="">
         greyscale <img src="http://localhost:8080/greyscale/jpeg.jpg">
-        </p>
-        <p>
+        </div>
+        <div>
         negate <img src="http://localhost:8080/negate/jpeg.jpg">
-        </p>
-        <p>
+        </div>
+        <div>
         edgedetect <img src="http://localhost:8080/edgedetect/jpeg.jpg">
-        </p>        
-        <p>
+        </div>        
+        <div>
         brightness <img src="http://localhost:8080/brightness/jpeg.jpg/50">
-        </p>
-        <p>
+        </div>
+        <div>
         contrast <img src="http://localhost:8080/contrast/jpeg.jpg/50">
-        </p>     
-        <p>
+        </div>     
+        <div>
         emboss <img src="http://localhost:8080/emboss/jpeg.jpg">
-        </p>
-        <p>
+        </div>
+        <div>
         gaussianblur <img src="http://localhost:8080/gaussianblur/jpeg.jpg">
-        </p>  
-        <p>
+        </div>  
+        <div>
         selectiveblur <img src="http://localhost:8080/selectiveblur/jpeg.jpg">
-        </p>  
-        <p>
+        </div>  
+        <div>
         smooth <img src="http://localhost:8080/smooth/jpeg.jpg/3">
-        </p>  
-        <p>
+        </div>  
+        <div>
         pixelate <img src="http://localhost:8080/pixelate/jpeg.jpg/3">
-        </p>  
-        <p>
+        </div>  
+        <div>
         crop <img src="http://localhost:8080/crop/jpeg.jpg/10/10/150/150">
-        </p> 
-        <p>
+        </div> 
+        <div>
         rotate <img src="http://localhost:8080/rotate/jpeg.jpg/10/black">
-        </p> 
+        </div> 
 
     </body>
 </html>
