Added demo calls

--- a/BasicImagePackage.html
+++ b/BasicImagePackage.html
@@ -32,7 +32,7 @@ and open the template in the editor.
             <div class="panel-heading">greyscale</div>
             <div class="panel-body">
                 <div class="span4">
-                <img style="float:left" src="http://localhost:8080/greyscale/jpeg.jpg"/>
+                <img style="float:left" src="http://localhost:8080/greyscale/demo"/>
                 <div class="content-heading"><h3>This is a greyscale function.</h3></div>
                 <p style="clear:both">This function takes no parameters</p>
                 </div>
@@ -42,75 +42,75 @@ and open the template in the editor.
         <div class="panel panel-info">
             <div class="panel-heading">negate</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/negate/jpeg.jpg">
+              <img src="http://localhost:8080/negate/demo">
             </div>
          </div>
 
         <div class="panel panel-info">
             <div class="panel-heading">edgedetect</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/edgedetect/jpeg.jpg">
+              <img src="http://localhost:8080/edgedetect/demo">
             </div>
          </div>
 
         <div class="panel panel-info">
             <div class="panel-heading">brightness</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/brightness/jpeg.jpg/50">
+              <img src="http://localhost:8080/brightness/demo/50">
             </div>
          </div>
         <div class="panel panel-info">
             <div class="panel-heading">contrast</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/contrast/jpeg.jpg/50">
+              <img src="http://localhost:8080/contrast/demo/50">
             </div>
          </div>
         <div class="panel panel-info">
             <div class="panel-heading">emboss</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/emboss/jpeg.jpg">
+              <img src="http://localhost:8080/emboss/demo">
             </div>
          </div>
 
         <div class="panel panel-info">
             <div class="panel-heading">gaussianblur</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/gaussianblur/jpeg.jpg">
+              <img src="http://localhost:8080/gaussianblur/demo">
             </div>
          </div>
 
         <div class="panel panel-info">
             <div class="panel-heading">selectiveblur</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/selectiveblur/jpeg.jpg">
+              <img src="http://localhost:8080/selectiveblur/demo">
             </div>
          </div>
 
         <div class="panel panel-info">
             <div class="panel-heading">smooth</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/smooth/jpeg.jpg/3">
+              <img src="http://localhost:8080/smooth/demo/3">
             </div>
          </div>
         
         <div class="panel panel-info">
             <div class="panel-heading">pixelate</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/pixelate/jpeg.jpg/3">
+              <img src="http://localhost:8080/pixelate/demo/3">
             </div>
          </div>
 
         <div class="panel panel-info">
             <div class="panel-heading">crop</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/crop/jpeg.jpg/50/50/150/150">
+              <img src="http://localhost:8080/crop/demo/50/50/150/150">
             </div>
          </div>
         
         <div class="panel panel-info">
             <div class="panel-heading">rotate</div>
             <div class="panel-body">
-              <img src="http://localhost:8080/rotate/jpeg.jpg/10/black">
+              <img src="http://localhost:8080/rotate/demo/10/black">
             </div>
          </div>
     </body>
